modal added and half styled

--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -11,3 +11,12 @@ main {
 body{
   background-color: lightblue;
 }
+
+.modal-map{
+  height: 400px;
+}
+
+.margin-modal{
+  margin: 0;
+  border-radius: 0;
+}
