--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -6,27 +6,42 @@
     Add a task
   </a>
 </h1>
-<section class="todays-tasks">
+<section class="todays-tasks container">
   <h2>Today's Tasks:</h2>
   <p ng-if="!tasksIndex.todaysTasks.length">You have no tasks set for today! <a ui-sref='tasksNew({ id: main.currentUser._id })'>Add a task!</a></p>
   <div class="columns is-multiline">
     <div ng-repeat="task in tasksIndex.todaysTasks" class="column is-half-tablet is-one-third-desktop">
       <div class="card">
-        <div class="card-image"></div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <p class="title is-4">{{ task.displayTitle }}</p>
-              <p class="title is-4">{{ task.description }}</p>
-              <p class="title is-4">{{ task.points }}</p>
-              <p class="title is-4">{{ task.dueDate }}</p>
-              <p ng-if="task.time != 'Invalid date'" class="title is-4">{{ task.time }}</p>
+        <div class="media">
+          <div class="media-content">
+            <p class="title is-4 has-text-centered">{{ task.displayTitle }}</p>
+            <div class="has-text-centered">
+              <a class="button edit" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>
+                <i class="fas fa-edit"></i>
+              </a>
+            </div>
+            <div class="description">
+              <p class="is-4">{{ task.description }}</p>
+            </div>
+            <div class="time-and-date has-text-centered">
+              <p class="is-4">
+                <i class="fas fa-calendar-alt"></i>
+                &nbsp
+                {{ task.dueDate }}
+              </p>
+              <p ng-if="task.time != 'Invalid date'" class="is-4">
+                <i class="fas fa-clock"></i>
+                &nbsp
+                {{ task.time }}
+              </p>
             </div>
           </div>
         </div>
         <div ng-if="task.location" class="map" g-map center="task.location">GOOGLE MAP GOES HERE</div>
-        <a class="button" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>Edit</a>
-        <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button">Complete</button>
+        <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button is-primary complete"><i class="fas fa-check"></i>
+          &nbsp
+          Complete
+        </button>
       </div>
     </div>
   </div>
@@ -34,27 +49,42 @@
 <div class="has-text-centered divider">
   <i class="fas fa-leaf"></i>
 </div>
-<section class="past-tasks">
+<section class="past-tasks container">
   <h2>Past Unfinished Tasks:</h2>
   <p ng-if="!tasksIndex.pastTasks.length">Congratulations. You have no unfinished tasks from the past!</p>
   <div class="columns is-multiline">
     <div ng-repeat="task in tasksIndex.pastTasks" class="column is-half-tablet is-one-third-desktop">
       <div class="card">
-        <div class="card-image"></div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <p class="title is-4">{{ task.displayTitle }}</p>
-                <p class="title is-4">{{ task.description }}</p>
-                <p class="title is-4">{{ task.points }}</p>
-                <p class="title is-4">{{ task.dueDate }}</p>
-                <p ng-if="task.time != 'Invalid date'" class="title is-4">{{ task.time }}</p>
-              </div>
+        <div class="media">
+          <div class="media-content">
+            <p class="title is-4 has-text-centered">{{ task.displayTitle }}</p>
+            <div class="has-text-centered">
+              <a class="button edit" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>
+                <i class="fas fa-edit"></i>
+              </a>
+            </div>
+            <div class="description">
+              <p class="is-4">{{ task.description }}</p>
+            </div>
+            <div class="time-and-date has-text-centered">
+              <p class="is-4">
+                <i class="fas fa-calendar-alt"></i>
+                &nbsp
+                {{ task.dueDate }}
+              </p>
+              <p ng-if="task.time != 'Invalid date'" class="is-4">
+                <i class="fas fa-clock"></i>
+                &nbsp
+                {{ task.time }}
+              </p>
             </div>
           </div>
-          <div ng-if="task.location" class="map" g-map center="task.location">GOOGLE MAP GOES HERE</div>
-          <a class="button" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>Edit</a>
-          <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button">Complete</button>
+        </div>
+        <div ng-if="task.location" class="map" g-map center="task.location">GOOGLE MAP GOES HERE</div>
+        <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button is-primary complete"><i class="fas fa-check"></i>
+          &nbsp
+          Complete
+        </button>
       </div>
     </div>
   </div>
@@ -62,28 +92,43 @@
 <div class="has-text-centered divider">
   <i class="fas fa-leaf"></i>
 </div>
-<section class="future-tasks">
+<section class="future-tasks container">
   <h2>Future Tasks:</h2>
   <p ng-if="!tasksIndex.futureTasks.length">You have no upcoming tasks for the future.</p>
   <div class="columns is-multiline">
     <div ng-repeat="task in tasksIndex.futureTasks" class="column is-half-tablet is-one-third-desktop">
-        <div class="card">
-          <div class="card-image"></div>
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <p class="title is-4">{{ task.displayTitle }}</p>
-                <p class="title is-4">{{ task.description }}</p>
-                <p class="title is-4">{{ task.points }}</p>
-                <p class="title is-4">{{ task.dueDate }}</p>
-                <p ng-if="task.time != 'Invalid date'" class="title is-4">{{ task.time }}</p>
-              </div>
+      <div class="card">
+        <div class="media">
+          <div class="media-content">
+            <p class="title is-4 has-text-centered">{{ task.displayTitle }}</p>
+            <div class="has-text-centered">
+              <a class="button edit" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>
+                <i class="fas fa-edit"></i>
+              </a>
+            </div>
+            <div class="description">
+              <p class="is-4">{{ task.description }}</p>
+            </div>
+            <div class="time-and-date has-text-centered">
+              <p class="is-4">
+                <i class="fas fa-calendar-alt"></i>
+                &nbsp
+                {{ task.dueDate }}
+              </p>
+              <p ng-if="task.time != 'Invalid date'" class="is-4">
+                <i class="fas fa-clock"></i>
+                &nbsp
+                {{ task.time }}
+              </p>
             </div>
           </div>
-          <div ng-if="task.location" class="map" g-map center="task.location">GOOGLE MAP GOES HERE</div>
-          <a class="button" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>Edit</a>
-          <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button">Complete</button>
         </div>
+        <div ng-if="task.location" class="map" g-map center="task.location">GOOGLE MAP GOES HERE</div>
+        <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button is-primary complete"><i class="fas fa-check"></i>
+          &nbsp
+          Complete
+        </button>
+      </div>
     </div>
   </div>
 </section>
