--- a/src/views/auth/edit.html
+++ b/src/views/auth/edit.html
@@ -16,5 +16,5 @@
     <input class="input" type="hidden" placeholder="Password Confirmation" name="passwordConfirmation" ng-model="usersEdit.user.passwordConfirmation" />
   </div>
   <button class="button is-primary">Submit</button>
-  <button class="button is-danger" ng-click="usersShow.handleUsersDelete()" class="button">Delete Profile</button>
+  <button class="button is-danger" ng-click="usersEdit.handleUsersDelete()" class="button">Delete Profile</button>
 </form>
