--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -23,7 +23,13 @@
             <div class="description">
               <p class="is-4">{{ task.description }}</p>
             </div>
-            <button ng-click="tasksIndex.openModal(task._id)" class="button">Expand</button>
+            <div class="expand-div has-text-centered">
+              <button class="expand" ng-click="tasksIndex.openModal(task._id)">
+                <i class="fas fa-expand-arrows-alt"></i>
+                &nbsp
+                Expand
+              </button>
+            </div>
             <div class="time-and-date has-text-centered">
               <p class="is-4">
                 <i class="fas fa-calendar-alt"></i>
@@ -87,7 +93,13 @@
             <div class="description">
               <p class="is-4">{{ task.description }}</p>
             </div>
-            <button ng-click="tasksIndex.openModal(task._id)" class="button">Expand</button>
+            <div class="expand-div has-text-centered">
+              <button class="expand" ng-click="tasksIndex.openModal(task._id)">
+                <i class="fas fa-expand-arrows-alt"></i>
+                &nbsp
+                Expand
+              </button>
+            </div>
             <div class="time-and-date has-text-centered">
               <p class="is-4">
                 <i class="fas fa-calendar-alt"></i>
@@ -151,7 +163,13 @@
             <div class="description">
               <p class="is-4">{{ task.description }}</p>
             </div>
-            <button ng-click="tasksIndex.openModal(task._id)" class="button">Expand</button>
+            <div class="expand-div has-text-centered">
+              <button class="expand" ng-click="tasksIndex.openModal(task._id)">
+                <i class="fas fa-expand-arrows-alt"></i>
+                &nbsp
+                Expand
+              </button>
+            </div>
             <div class="time-and-date has-text-centered">
               <p class="is-4">
                 <i class="fas fa-calendar-alt"></i>
