--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -21,7 +21,7 @@
               </a>
             </div>
             <div class="description">
-              <p class="is-4">{{ task.description }}</p>
+              <p class="is-4">{{ task.displayDescrpition }}</p>
             </div>
             <div class="expand-div has-text-centered">
               <button class="expand" ng-click="tasksIndex.openModal(task._id)">
@@ -91,7 +91,7 @@
               </a>
             </div>
             <div class="description">
-              <p class="is-4">{{ task.description }}</p>
+              <p class="is-4">{{ task.displayDescrpition }}</p>
             </div>
             <div class="expand-div has-text-centered">
               <button class="expand" ng-click="tasksIndex.openModal(task._id)">
@@ -161,7 +161,7 @@
               </a>
             </div>
             <div class="description">
-              <p class="is-4">{{ task.description }}</p>
+              <p class="is-4">{{ task.displayDescrpition }}</p>
             </div>
             <div class="expand-div has-text-centered">
               <button class="expand" ng-click="tasksIndex.openModal(task._id)">
